# src/types/Response/Message.Response.ts
@@ -1,5 +1,9 @@
 export interface ISendMessageResponse {
 	_id: string;
 	group: string;
-	message: string;
+	messagebody: string;
+}
+export interface Iuserallmessageres{
+	groupid:string
+	messagebody:string
 }
