# src/types/document/IMESSAGE.ts
@@ -2,12 +2,12 @@ import { Document } from "mongoose";
 export interface IMESSAGE extends Document {
     _id: string;
     group:string|any
-    message: IGroupMessages[]
+    messagearray: IGroupMessages[]
     createdat?: string;
     updatedat?: string;
 
 }
 export interface IGroupMessages{
     user:string
-    message:string
+    messagebody:string
 }
